# python-db-tools

./: .gitignore  GEMINI.md  README.md  TODO.md  TOOL_IDEAS.md  __init__.py  exporter.py  gui.py  main.py  manager.py  pyproject.toml  runner.py
.config/: .key  config.toml
.github/workflows/: build-windows.yml
config/: config.toml
config/database/: config.toml
config/locales/: en_US.toml  pt_BR.toml
config/logging/: config.toml
db_tools/: __init__.py  exporter.py  extras.py  logger.py  manager.py  runner.py  security.py
db_tools/database/: __init__.py  manager.py  query_type.py  runner.py
db_tools/gui/: connections.py
lib/: extras.py  logger.py  types.py
